--- a/_site.yml
+++ b/_site.yml
@@ -10,6 +10,8 @@ navbar:
       href: research.html
     - text: "Publications"
       href: publications.html
+    - text: "Portfolio"
+      href: portfolio.html
     - text: "About me"
       href: about.html
 output: distill::distill_article
